Add WriteSingleCoil and fix endianness on ReadDiscreteInputs() and ReadCoils()
