# gen/modbustohttp/v1alpha1/service.pb.go
@@ -398,6 +398,86 @@ func (x *ReadDiscreteInputsResponse) GetInputs() []*BooleanAddress {
 	return nil
 }
 
+type WriteSingleCoilRequest struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	Coil          *BooleanAddress        `protobuf:"bytes,1,opt,name=coil,proto3" json:"coil,omitempty"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *WriteSingleCoilRequest) Reset() {
+	*x = WriteSingleCoilRequest{}
+	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[8]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *WriteSingleCoilRequest) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*WriteSingleCoilRequest) ProtoMessage() {}
+
+func (x *WriteSingleCoilRequest) ProtoReflect() protoreflect.Message {
+	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[8]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use WriteSingleCoilRequest.ProtoReflect.Descriptor instead.
+func (*WriteSingleCoilRequest) Descriptor() ([]byte, []int) {
+	return file_modbustohttp_v1alpha1_service_proto_rawDescGZIP(), []int{8}
+}
+
+func (x *WriteSingleCoilRequest) GetCoil() *BooleanAddress {
+	if x != nil {
+		return x.Coil
+	}
+	return nil
+}
+
+type WriteSingleCoilResponse struct {
+	state         protoimpl.MessageState `protogen:"open.v1"`
+	unknownFields protoimpl.UnknownFields
+	sizeCache     protoimpl.SizeCache
+}
+
+func (x *WriteSingleCoilResponse) Reset() {
+	*x = WriteSingleCoilResponse{}
+	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[9]
+	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+	ms.StoreMessageInfo(mi)
+}
+
+func (x *WriteSingleCoilResponse) String() string {
+	return protoimpl.X.MessageStringOf(x)
+}
+
+func (*WriteSingleCoilResponse) ProtoMessage() {}
+
+func (x *WriteSingleCoilResponse) ProtoReflect() protoreflect.Message {
+	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[9]
+	if x != nil {
+		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
+		if ms.LoadMessageInfo() == nil {
+			ms.StoreMessageInfo(mi)
+		}
+		return ms
+	}
+	return mi.MessageOf(x)
+}
+
+// Deprecated: Use WriteSingleCoilResponse.ProtoReflect.Descriptor instead.
+func (*WriteSingleCoilResponse) Descriptor() ([]byte, []int) {
+	return file_modbustohttp_v1alpha1_service_proto_rawDescGZIP(), []int{9}
+}
+
 type BooleanAddress struct {
 	state protoimpl.MessageState `protogen:"open.v1"`
 	// The address of the coil or discrete input
@@ -410,7 +490,7 @@ type BooleanAddress struct {
 
 func (x *BooleanAddress) Reset() {
 	*x = BooleanAddress{}
-	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[8]
+	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[10]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -422,7 +502,7 @@ func (x *BooleanAddress) String() string {
 func (*BooleanAddress) ProtoMessage() {}
 
 func (x *BooleanAddress) ProtoReflect() protoreflect.Message {
-	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[8]
+	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[10]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -435,7 +515,7 @@ func (x *BooleanAddress) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use BooleanAddress.ProtoReflect.Descriptor instead.
 func (*BooleanAddress) Descriptor() ([]byte, []int) {
-	return file_modbustohttp_v1alpha1_service_proto_rawDescGZIP(), []int{8}
+	return file_modbustohttp_v1alpha1_service_proto_rawDescGZIP(), []int{10}
 }
 
 func (x *BooleanAddress) GetAddress() uint32 {
@@ -465,7 +545,7 @@ type Register struct {
 
 func (x *Register) Reset() {
 	*x = Register{}
-	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[9]
+	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[11]
 	ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 	ms.StoreMessageInfo(mi)
 }
@@ -477,7 +557,7 @@ func (x *Register) String() string {
 func (*Register) ProtoMessage() {}
 
 func (x *Register) ProtoReflect() protoreflect.Message {
-	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[9]
+	mi := &file_modbustohttp_v1alpha1_service_proto_msgTypes[11]
 	if x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
 		if ms.LoadMessageInfo() == nil {
@@ -490,7 +570,7 @@ func (x *Register) ProtoReflect() protoreflect.Message {
 
 // Deprecated: Use Register.ProtoReflect.Descriptor instead.
 func (*Register) Descriptor() ([]byte, []int) {
-	return file_modbustohttp_v1alpha1_service_proto_rawDescGZIP(), []int{9}
+	return file_modbustohttp_v1alpha1_service_proto_rawDescGZIP(), []int{11}
 }
 
 func (x *Register) GetAddress() uint32 {
@@ -536,18 +616,22 @@ const file_modbustohttp_v1alpha1_service_proto_rawDesc = "" +
 	"\xbaH\a*\x05\x18\xd0\x0f(\x01R\bquantity:q\xbaHn\x1al\n" +
 	"\x10not.out.of.range\x121address + quantity must not be greater than 65536\x1a%this.address + this.quantity <= 65536\"h\n" +
 	"\x1aReadDiscreteInputsResponse\x12J\n" +
-	"\x06inputs\x18\x01 \x03(\v2%.modbustohttp.v1alpha1.BooleanAddressB\v\xbaH\b\x92\x01\x05\b\x01\x10\xd0\x0fR\x06inputs\"M\n" +
+	"\x06inputs\x18\x01 \x03(\v2%.modbustohttp.v1alpha1.BooleanAddressB\v\xbaH\b\x92\x01\x05\b\x01\x10\xd0\x0fR\x06inputs\"S\n" +
+	"\x16WriteSingleCoilRequest\x129\n" +
+	"\x04coil\x18\x01 \x01(\v2%.modbustohttp.v1alpha1.BooleanAddressR\x04coil\"\x19\n" +
+	"\x17WriteSingleCoilResponse\"M\n" +
 	"\x0eBooleanAddress\x12%\n" +
 	"\aaddress\x18\x01 \x01(\rB\v\xbaH\b*\x06\x18\xff\xff\x03(\x00R\aaddress\x12\x14\n" +
 	"\x05value\x18\x02 \x01(\bR\x05value\"R\n" +
 	"\bRegister\x12#\n" +
 	"\aaddress\x18\x01 \x01(\rB\t\xbaH\x06*\x04\x18\xff\xff\x03R\aaddress\x12!\n" +
-	"\x05value\x18\x02 \x01(\rB\v\xbaH\b*\x06\x18\xff\xff\x03(\x00R\x05value2\xf4\x03\n" +
+	"\x05value\x18\x02 \x01(\rB\v\xbaH\b*\x06\x18\xff\xff\x03(\x00R\x05value2\xf6\x04\n" +
 	"\rModbusService\x12\x84\x01\n" +
-	"\x14ReadHoldingRegisters\x122.modbustohttp.v1alpha1.ReadHoldingRegistersRequest\x1a3.modbustohttp.v1alpha1.ReadHoldingRegistersResponse\"\x03\x90\x02\x01\x12|\n" +
-	"\x13WriteSingleRegister\x121.modbustohttp.v1alpha1.WriteSingleRegisterRequest\x1a2.modbustohttp.v1alpha1.WriteSingleRegisterResponse\x12c\n" +
-	"\tReadCoils\x12'.modbustohttp.v1alpha1.ReadCoilsRequest\x1a(.modbustohttp.v1alpha1.ReadCoilsResponse\"\x03\x90\x02\x01\x12y\n" +
-	"\x12ReadDiscreteInputs\x120.modbustohttp.v1alpha1.ReadDiscreteInputsRequest\x1a1.modbustohttp.v1alpha1.ReadDiscreteInputsResponseB\xc6\x01\n" +
+	"\x14ReadHoldingRegisters\x122.modbustohttp.v1alpha1.ReadHoldingRegistersRequest\x1a3.modbustohttp.v1alpha1.ReadHoldingRegistersResponse\"\x03\x90\x02\x01\x12\x81\x01\n" +
+	"\x13WriteSingleRegister\x121.modbustohttp.v1alpha1.WriteSingleRegisterRequest\x1a2.modbustohttp.v1alpha1.WriteSingleRegisterResponse\"\x03\x90\x02\x02\x12c\n" +
+	"\tReadCoils\x12'.modbustohttp.v1alpha1.ReadCoilsRequest\x1a(.modbustohttp.v1alpha1.ReadCoilsResponse\"\x03\x90\x02\x01\x12~\n" +
+	"\x12ReadDiscreteInputs\x120.modbustohttp.v1alpha1.ReadDiscreteInputsRequest\x1a1.modbustohttp.v1alpha1.ReadDiscreteInputsResponse\"\x03\x90\x02\x01\x12u\n" +
+	"\x0fWriteSingleCoil\x12-.modbustohttp.v1alpha1.WriteSingleCoilRequest\x1a..modbustohttp.v1alpha1.WriteSingleCoilResponse\"\x03\x90\x02\x02B\xc6\x01\n" +
 	"\x19com.modbustohttp.v1alpha1B\fServiceProtoP\x01Z&modbustohttp/gen/modbustohttp/v1alpha1\xa2\x02\x03MXX\xaa\x02\x15Modbustohttp.V1alpha1\xca\x02\x15Modbustohttp\\V1alpha1\xe2\x02!Modbustohttp\\V1alpha1\\GPBMetadata\xea\x02\x16Modbustohttp::V1alpha1b\x06proto3"
 
 var (
@@ -562,7 +646,7 @@ func file_modbustohttp_v1alpha1_service_proto_rawDescGZIP() []byte {
 	return file_modbustohttp_v1alpha1_service_proto_rawDescData
 }
 
-var file_modbustohttp_v1alpha1_service_proto_msgTypes = make([]protoimpl.MessageInfo, 10)
+var file_modbustohttp_v1alpha1_service_proto_msgTypes = make([]protoimpl.MessageInfo, 12)
 var file_modbustohttp_v1alpha1_service_proto_goTypes = []any{
 	(*ReadHoldingRegistersRequest)(nil),  // 0: modbustohttp.v1alpha1.ReadHoldingRegistersRequest
 	(*ReadHoldingRegistersResponse)(nil), // 1: modbustohttp.v1alpha1.ReadHoldingRegistersResponse
@@ -572,27 +656,32 @@ var file_modbustohttp_v1alpha1_service_proto_goTypes = []any{
 	(*ReadCoilsResponse)(nil),            // 5: modbustohttp.v1alpha1.ReadCoilsResponse
 	(*ReadDiscreteInputsRequest)(nil),    // 6: modbustohttp.v1alpha1.ReadDiscreteInputsRequest
 	(*ReadDiscreteInputsResponse)(nil),   // 7: modbustohttp.v1alpha1.ReadDiscreteInputsResponse
-	(*BooleanAddress)(nil),               // 8: modbustohttp.v1alpha1.BooleanAddress
-	(*Register)(nil),                     // 9: modbustohttp.v1alpha1.Register
+	(*WriteSingleCoilRequest)(nil),       // 8: modbustohttp.v1alpha1.WriteSingleCoilRequest
+	(*WriteSingleCoilResponse)(nil),      // 9: modbustohttp.v1alpha1.WriteSingleCoilResponse
+	(*BooleanAddress)(nil),               // 10: modbustohttp.v1alpha1.BooleanAddress
+	(*Register)(nil),                     // 11: modbustohttp.v1alpha1.Register
 }
 var file_modbustohttp_v1alpha1_service_proto_depIdxs = []int32{
-	9, // 0: modbustohttp.v1alpha1.ReadHoldingRegistersResponse.registers:type_name -> modbustohttp.v1alpha1.Register
-	9, // 1: modbustohttp.v1alpha1.WriteSingleRegisterRequest.register:type_name -> modbustohttp.v1alpha1.Register
-	8, // 2: modbustohttp.v1alpha1.ReadCoilsResponse.coils:type_name -> modbustohttp.v1alpha1.BooleanAddress
-	8, // 3: modbustohttp.v1alpha1.ReadDiscreteInputsResponse.inputs:type_name -> modbustohttp.v1alpha1.BooleanAddress
-	0, // 4: modbustohttp.v1alpha1.ModbusService.ReadHoldingRegisters:input_type -> modbustohttp.v1alpha1.ReadHoldingRegistersRequest
-	2, // 5: modbustohttp.v1alpha1.ModbusService.WriteSingleRegister:input_type -> modbustohttp.v1alpha1.WriteSingleRegisterRequest
-	4, // 6: modbustohttp.v1alpha1.ModbusService.ReadCoils:input_type -> modbustohttp.v1alpha1.ReadCoilsRequest
-	6, // 7: modbustohttp.v1alpha1.ModbusService.ReadDiscreteInputs:input_type -> modbustohttp.v1alpha1.ReadDiscreteInputsRequest
-	1, // 8: modbustohttp.v1alpha1.ModbusService.ReadHoldingRegisters:output_type -> modbustohttp.v1alpha1.ReadHoldingRegistersResponse
-	3, // 9: modbustohttp.v1alpha1.ModbusService.WriteSingleRegister:output_type -> modbustohttp.v1alpha1.WriteSingleRegisterResponse
-	5, // 10: modbustohttp.v1alpha1.ModbusService.ReadCoils:output_type -> modbustohttp.v1alpha1.ReadCoilsResponse
-	7, // 11: modbustohttp.v1alpha1.ModbusService.ReadDiscreteInputs:output_type -> modbustohttp.v1alpha1.ReadDiscreteInputsResponse
-	8, // [8:12] is the sub-list for method output_type
-	4, // [4:8] is the sub-list for method input_type
-	4, // [4:4] is the sub-list for extension type_name
-	4, // [4:4] is the sub-list for extension extendee
-	0, // [0:4] is the sub-list for field type_name
+	11, // 0: modbustohttp.v1alpha1.ReadHoldingRegistersResponse.registers:type_name -> modbustohttp.v1alpha1.Register
+	11, // 1: modbustohttp.v1alpha1.WriteSingleRegisterRequest.register:type_name -> modbustohttp.v1alpha1.Register
+	10, // 2: modbustohttp.v1alpha1.ReadCoilsResponse.coils:type_name -> modbustohttp.v1alpha1.BooleanAddress
+	10, // 3: modbustohttp.v1alpha1.ReadDiscreteInputsResponse.inputs:type_name -> modbustohttp.v1alpha1.BooleanAddress
+	10, // 4: modbustohttp.v1alpha1.WriteSingleCoilRequest.coil:type_name -> modbustohttp.v1alpha1.BooleanAddress
+	0,  // 5: modbustohttp.v1alpha1.ModbusService.ReadHoldingRegisters:input_type -> modbustohttp.v1alpha1.ReadHoldingRegistersRequest
+	2,  // 6: modbustohttp.v1alpha1.ModbusService.WriteSingleRegister:input_type -> modbustohttp.v1alpha1.WriteSingleRegisterRequest
+	4,  // 7: modbustohttp.v1alpha1.ModbusService.ReadCoils:input_type -> modbustohttp.v1alpha1.ReadCoilsRequest
+	6,  // 8: modbustohttp.v1alpha1.ModbusService.ReadDiscreteInputs:input_type -> modbustohttp.v1alpha1.ReadDiscreteInputsRequest
+	8,  // 9: modbustohttp.v1alpha1.ModbusService.WriteSingleCoil:input_type -> modbustohttp.v1alpha1.WriteSingleCoilRequest
+	1,  // 10: modbustohttp.v1alpha1.ModbusService.ReadHoldingRegisters:output_type -> modbustohttp.v1alpha1.ReadHoldingRegistersResponse
+	3,  // 11: modbustohttp.v1alpha1.ModbusService.WriteSingleRegister:output_type -> modbustohttp.v1alpha1.WriteSingleRegisterResponse
+	5,  // 12: modbustohttp.v1alpha1.ModbusService.ReadCoils:output_type -> modbustohttp.v1alpha1.ReadCoilsResponse
+	7,  // 13: modbustohttp.v1alpha1.ModbusService.ReadDiscreteInputs:output_type -> modbustohttp.v1alpha1.ReadDiscreteInputsResponse
+	9,  // 14: modbustohttp.v1alpha1.ModbusService.WriteSingleCoil:output_type -> modbustohttp.v1alpha1.WriteSingleCoilResponse
+	10, // [10:15] is the sub-list for method output_type
+	5,  // [5:10] is the sub-list for method input_type
+	5,  // [5:5] is the sub-list for extension type_name
+	5,  // [5:5] is the sub-list for extension extendee
+	0,  // [0:5] is the sub-list for field type_name
 }
 
 func init() { file_modbustohttp_v1alpha1_service_proto_init() }
@@ -607,7 +696,7 @@ func file_modbustohttp_v1alpha1_service_proto_init() {
 			GoPackagePath: reflect.TypeOf(x{}).PkgPath(),
 			RawDescriptor: unsafe.Slice(unsafe.StringData(file_modbustohttp_v1alpha1_service_proto_rawDesc), len(file_modbustohttp_v1alpha1_service_proto_rawDesc)),
 			NumEnums:      0,
-			NumMessages:   10,
+			NumMessages:   12,
 			NumExtensions: 0,
 			NumServices:   1,
 		},
